1. Updated CSS and HTML to fit 768px width windows with least loss of information and look. 2. Fixed the #top-nav when it scrolls down, it does not fit the width.

--- a/static/0.css
+++ b/static/0.css
@@ -80,10 +80,11 @@ body
 body
 {
     max-width: 1920px;
-    min-width: 1180px; 
+    
     /* min-width temp solves background images get cut 
     off when horizontal scroll bar comes up or on mobile 
     browsers on my iphone */
+    /*min-width: 1180px;*/
     width: 100%;
     font-size: 14px;
     font-family: "Bebas Neue", arial, sans-serif;
@@ -125,8 +126,10 @@ h2 {
 }
 
 .section-box {
-    width: 1180px;
-    margin: 0 auto;
+    /* COMPATIBLE : Use 740 to make 768px no scroll bar */
+    min-width: 740px;
+    max-width: 1180px;
+
 }
 
 #highlights {
@@ -144,6 +147,7 @@ h2 {
         overflow: hidden;
         z-index: 100; /* make sure it is over every element */
     }
+
         #top-nav li {
             float: left;
         }
@@ -168,7 +172,7 @@ h2 {
             
             #top-nav a {
                 display: block;
-                cursor: hand;
+                cursor: pointer;
                 font-size: 24px;
                 padding-top: 14px;
                 padding-bottom: 14px;
@@ -189,20 +193,18 @@ h2 {
 
 #previews {
     position: relative;
-    height: 140px;
+    height: 110px;
 }
 
     .trailer-n-gallery {
-        width: 600px;
-        height: 200px;
         position: absolute;
     }
 
-    #trailer-link {
+    #trailer-box {
         left: 0;
     }
 
-    #gallery-link {
+    #gallery-box {
         right: 0;
     }
 
@@ -239,35 +241,51 @@ h2 {
         padding-top: 10px;
         padding-bottom: 10px;
         font-size: 36px;
-
         border-radius: 2px;
     }
 
     #trailer-bar {
         padding-right: 20px;
-        width: 410px;
+        width: 310px;
         text-align: right;
     }
 
     #gallery-bar {
         right: 0;
         padding-left: 20px;
-        width: 380px;
+        width: 340px;
     }
 
 #map-strategies {
     position: relative;
-    height: 430px;
+    height: 380px;
 }
-
+    #map-strategies-title {
+        font-size: 48px;
+        text-align: center;
+    }
+    
     .map-images {
-        width: 550px;
-        background-size: 100%;
-        height: 269px;
-        background-repeat: no-repeat;
+        
+        width: 48%;
         position: absolute;
         top: 80px;
+        height: 300px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border: 1px #bbb solid;
     }
+
+    #map-1 {
+        background-image: url("./hollywood.jpg");
+        left: 0;
+    }
+
+    #map-2 {
+        background-image: url("./volskaya-industries.jpg");
+        right: 0;
+    }
+
         .map-title {
             position: absolute;
             left: 0;
@@ -276,29 +294,14 @@ h2 {
             color: white;
             font-size: 28px;
             font-style: italic;
-            padding: 10px 18px;
+            padding: 12px 18px;
             text-align: right;
             background-color: rgba(0, 0, 0, 0.7);
         }
 
-    #map-strategies-title {
-        font-size: 40px;
-        text-align: center;
-    }
-
-    #map-1 {
-        background-image: url("./hanamura-layout.jpg");
-        left: 0;
-    }
-
-    #map-2 {
-        background-image: url("./route-66-layout.jpg");
-        right: 0;
-    }
-
-#transparent-section
-{
-    height: 300px;
+#transparent-section {
+    margin-top: 80px;
+    height: 320px;
     background-image: url("./gibraltar.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -314,9 +317,10 @@ h2 {
         position: absolute;
         left: 0;
         top: 0;
-        padding-top: 100px;
-        width: 720px;
-        height: 300px;
+        right: 450px;
+        padding-top: 10%;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
         #needs-winstons-title {
@@ -327,7 +331,7 @@ h2 {
         }
 
         #this-is-winston {
-            margin-top: 28px;
+            margin-top: 16px;
             text-align: center;
             font-family: Futura;
             font-size: 28px;
@@ -336,7 +340,7 @@ h2 {
     #winston-full-body {
         position: absolute;
         right: 0;
-        top: -120px;
+        top: -130px;
         height: 563px;
         border: 0px #000 solid;
         width: 450px;
@@ -348,24 +352,21 @@ h2 {
 #patch-notes {
     background-image: url("patch-notes-background.jpg");
     background-repeat: no-repeat;
-    height: 1500px;
-    padding-top: 30px;
+    padding-top: 48px;
+    padding-bottom: 32px;
     color: rgba(255, 255, 255, 0.8);
     overflow: hidden; /* temp solution for patch content overflows when zoom out */
 }
     #patch-nav-n-content{
-        position: relative;
-        
+        display: flex;
+        margin: 0 auto;
     }   
         #patch-history {
-            margin-top: 16px; /* to algin with patch content */
             padding: 24px 24px;
-            width: 200px;
+            min-width: 130px;
+            height: 330px;
             border-radius: 4px;
-            background:rgba(255, 255, 255, 0.05);
-            position: absolute;
-            top: 0;
-            left: 0;
+            background: rgba(255, 255, 255, 0.05);
         }
             #patch-history h2{
                 border-bottom: 4px #aaa solid;
@@ -385,17 +386,15 @@ h2 {
                 padding: 20px 0;
             }
         
-        #patch-article {
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 870px;
+        #patch-article {          
+            margin-left: 40px;
+            margin-right: 40px;
             
         }
             #patch-notes-heading {
                 font-size: 48px;
                 font-style: italic;
-                padding: 16px 0;
+
                 color: white;
             }
             
@@ -445,6 +444,7 @@ h2 {
     
     #profile {
         overflow: hidden;
+        
     }
         #player-avatar {
             float: left;
@@ -477,11 +477,15 @@ h2 {
         padding: 12px 0;
         border-bottom: 6px #777 solid;
     }
-        
     
     #featured-stats {
         
     }   
+        #featured-stats-content {
+            /* Hide the ul's additional 2% of 102% */
+            overflow: hidden;
+        }
+        
         #featured-stats ul{
             overflow: hidden;
             width: 102%;
@@ -489,7 +493,8 @@ h2 {
             #featured-stats li{
                 float: left;
                 width: 23%;
-                height: 160px;
+                /* Use 164px for .featured-stats-text wrapping into 2 lines */
+                height: 164px;
                 background-color: #333;
                 margin-right: 2%;
                 margin-top: 26px;
@@ -636,11 +641,12 @@ h2 {
                         border: 1px #bbb solid;
                         background-color: #aaa;
                         box-shadow: 2px 2px 4px #222;
+                        animation-duration: 1s;
+                        animation-name: progressing;
                     }
                     
                     .progressing-start {
-                        animation-duration: 1s;
-                        animation-name: progressing;
+                        
                     }
                     
                     @keyframes progressing {
